# SJSU-ANS_DeepRacer

./: .gitignore  README.md  data_loader_tester.py  source_ssh_controller.sh  source_ssh_driver.sh
algorithm_data/: navigation_map_cjm.pcd  occupancy_map_cjm.yaml
ans_gui/: README.md  package.xml  setup.cfg  setup.py
ans_gui/ans_gui_pkg/: MainWindow.py  ans_gui.py  joystick.py  mainwindow.ui
ans_gui/launch/: ans_gui_launcher.launch.py
ans_interfaces/: CMakeLists.txt  package.xml
ans_interfaces/srv/: DataCollectorState.srv
ans_msgs/: CMakeLists.txt
ans_server/src/: ans_cfg_client.cpp  ans_cfg_services.cpp
data_collector/: package.xml  retrieve_data.sh  setup.cfg  setup.py
data_collector/data_collector/: convert_to_data_list.py  data_collector.py
data_storage/: package.xml  setup.py
data_storage/data_storage/: data_subscriber.py
icp_map_building/: icp.py  icp_map_builder.py  icp_tester.py  map_analysis.py  map_debugger.py
lidar_acq_python/: package.xml  setup.cfg  setup.py
lidar_acq_python/lidar_acq_python/: lidar_acq.py
lidar_scan_acq/: CMakeLists.txt  package.xml
lidar_scan_acq/launch/: lidar_scan_acq_launch.py
lidar_scan_acq/src/: lidar_scan_acq.cpp
navigation_module/: README.md
navigation_module/ans_msgs/: CMakeLists.txt  package.xml
navigation_module/ans_msgs/srv/: Pose.srv
navigation_module/ans_server/: CMakeLists.txt  README.md  package.xml
navigation_module/ans_server/Example_Inputs/: Nav_Input_Creator.ipynb  occupancy_map.yaml  test_smaller.pcd
navigation_module/ans_server/launch/: ans.launch.py  ans_client.launch.py
navigation_module/ans_server/src/: ans_cfg_client.cpp  ans_cfg_services.cpp
navigation_module/camera_streamer/: package.xml  setup.cfg  setup.py
navigation_module/camera_streamer/camera_streamer/: camera_streamer.py
navigation_module/lidar_scan_acq/: CMakeLists.txt  package.xml
navigation_module/lidar_scan_acq/launch/: lidar_scan_acq.launch.py
navigation_module/lidar_scan_acq/src/: lidar_scan_acq.cpp
navigation_module/localization/: CMakeLists.txt  package.xml  setup.py
navigation_module/localization/launch/: localization.launch.py
navigation_module/localization/localization/: localization.py
navigation_module/localization/src/: localization.cpp
navigation_module/map_loader/: package.xml  setup.py
navigation_module/map_loader/map_loader/: map_loader.py
navigation_module/navigator_car/: package.xml  setup.cfg  setup.py
navigation_module/navigator_car/launch/: navigator_car.launch.py
navigation_module/navigator_car/navigator_car/: navigator_car.py
navigation_module/navigator_host/: package.xml  setup.cfg  setup.py
navigation_module/navigator_host/launch/: navigator_host.launch.py  navigator_host_tjm.launch.py
navigation_module/navigator_host/navigator_host/: navigator_host.py
navigation_module/path_planner/: package.xml  setup.py
navigation_module/path_planner/launch/: path_planner.launch.py  path_planner_cjm.launch.py
navigation_module/path_planner/occupancy_map_buider/: Occupancy_Map_for_Path_Planner.ipynb  occupancy_map_final_v8.yaml
navigation_module/path_planner/path_planner/: map.py  move.py  path_planner.py  robot.py  state.py
navigation_module/vel_controller/: package.xml  setup.cfg  setup.py
navigation_module/vel_controller/launch/: vel_controller.launch.py
navigation_module/vel_controller/vel_controller/: PID.py  vel_controller.py
pid_control/: CMakeLists.txt  package.xml
pid_control/launch/: pid_control.launch.py
pid_control/src/: pid_control.cpp
rviz_configs/: project_presentation.rviz  taylor_ssh_controller.rviz
rviz_interface/: package.xml  setup.cfg  setup.py
rviz_interface/rviz_interface/: rviz_interface.py
setup/: init_stop_core_services.sh  ros_user_macros.h  sourceme.sh
simulator/deepracer_bringup/config/: agent_control.yaml
simulator/deepracer_bringup/launch/: deepracer_spawn.launch.py
simulator/deepracer_sim/: CMakeLists.txt  README.md  package.xml
simulator/deepracer_sim/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
simulator/deepracer_sim/launch/: launch_sim.launch.py  rsp.launch.py
simulator/deepracer_sim/models/asymmetric_room/: model.config  model.sdf
simulator/deepracer_sim/models/building_floorplan/: model.config  model.sdf
simulator/deepracer_sim/models/small_warehouse/: model.config  model.sdf
simulator/deepracer_sim/models/xacro/collision/: deepracer_collision.xacro
simulator/deepracer_sim/models/xacro/control/: deepracer_ros_control.xacro
simulator/deepracer_sim/models/xacro/deepracer/: deepracer.xacro
simulator/deepracer_sim/models/xacro/sensor/: deepracer_gazebo_lidar.xacro
simulator/deepracer_sim/models/xacro/urdf/: deepracer_stereo_cameras_and_lidar_urdf.xacro
simulator/deepracer_sim/worlds/: asymmetric.world
ssh_controller/: CMakeLists.txt  package.xml
ssh_controller/launch/: ssh_controller.launch.py
ssh_controller/src/: ssh_controller.cpp
ssh_driver/: CMakeLists.txt  README.md  package.xml
ssh_driver/install/ssh_driver/lib/ssh_driver/: ssh_driver
ssh_driver/install/ssh_driver/share/ament_index/resource_index/package_run_dependencies/: ssh_driver
ssh_driver/install/ssh_driver/share/ament_index/resource_index/parent_prefix_path/: ssh_driver
ssh_driver/install/ssh_driver/share/ssh_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ssh_driver/install/ssh_driver/share/ssh_driver/cmake/: ssh_driverConfig.cmake
ssh_driver/install/ssh_driver/share/ssh_driver/launch/: ssh_launcher.launch.py
ssh_driver/launch/: ssh_launcher.launch.py
ssh_driver/src/: ssh_driver.cpp
video_streamer/: package.xml  setup.cfg  setup.py
video_streamer/video_streamer/: video_streamer.py
