cmake_minimum_required(VERSION 3.8)
project(ans_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

## Find ROS package dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)

set(srv_files
  "srv/FilePath.srv"
)

rosidl_generate_interfaces(${PROJECT_NAME}
  ${srv_files}
 )

ament_export_dependencies(rosidl_default_runtime)

ament_package()
